--- a/frontend/user_dashboard.html
+++ b/frontend/user_dashboard.html
@@ -34,7 +34,7 @@
 
             const accessToken = localStorage.getItem('access_token');
 
-            axios.get('http://localhost:5000/findCustomersBooks', {
+            axios.get('https://mylibrary-vwl6.onrender.com/findCustomersBooks', {
                 headers: {
                     Authorization: `Bearer ${accessToken}`
                 }
