--- a/frontend/index.html
+++ b/frontend/index.html
@@ -36,7 +36,7 @@
     </div>
 
     <script>
-        const apiUrl = "http://127.0.0.1:5000";
+        const apiUrl = "https://mylibrary-vwl6.onrender.com";
 
         function login() {
             const formData = {
