--- a/frontend/signUp.html
+++ b/frontend/signUp.html
@@ -103,10 +103,10 @@
             }
 
 
-            axios.post('http://localhost:5000/signup', data)
+            axios.post('https://mylibrary-vwl6.onrender.com/signup', data)
                 .then(response => {
                     alert("Sign up successful!");
-                    window.location.href = "login.html";
+                    window.location.href = "index.html";
                 })
                 .catch(error => {
                     console.error("Error during sign-up:", error);
